Closed
Bug 1426588
Opened 8 years ago
Closed 8 years ago
Intermittent PROCESS-CRASH | dom/payments/test/test_canMakePayment.html | application crashed [@ mozilla::wr::WebRenderAPI::Clone]
Categories
(Core :: Graphics: WebRender, defect, P5)
Core
Graphics: WebRender
Tracking
()
RESOLVED
FIXED
mozilla61
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox59 | --- | disabled |
| firefox60 | --- | disabled |
| firefox61 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: sotaro)
References
(Blocks 1 open bug)
Details
(Keywords: intermittent-failure)
Crash Data
Attachments
(1 file)
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•8 years ago
|
Crash Signature: [@ mozilla::wr::WebRenderAPI::Clone]
Component: DOM → Graphics: WebRender
Summary: Intermittent dom/payments/test/test_canMakePayment.html | application terminated with exit code 11 → Intermittent PROCESS-CRASH | dom/payments/test/test_canMakePayment.html | application crashed [@ mozilla::wr::WebRenderAPI::Clone]
Comment 5•8 years ago
|
||
Looks like api can be a null refptr at https://searchfox.org/mozilla-central/rev/11d0ff9f36465ce19b0c43d1ecc3025791eeb808/gfx/layers/ipc/CrossProcessCompositorBridgeParent.cpp#232 - we should probably guard against that.
Updated•8 years ago
|
Blocks: wr-stability
Updated•8 years ago
|
Blocks: stage-wr-year
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → sotaro.ikeda.g
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 11•8 years ago
|
||
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #5)
> Looks like api can be a null refptr at
> https://searchfox.org/mozilla-central/rev/
> 11d0ff9f36465ce19b0c43d1ecc3025791eeb808/gfx/layers/ipc/
> CrossProcessCompositorBridgeParent.cpp#232 - we should probably guard
> against that.
Yea, it seems to address the problem.
| Assignee | ||
Comment 12•8 years ago
|
||
| Assignee | ||
Updated•8 years ago
|
Attachment #8958024 -
Flags: review?(nical.bugzilla)
Updated•8 years ago
|
Attachment #8958024 -
Flags: review?(nical.bugzilla) → review+
| Assignee | ||
Comment 13•8 years ago
|
||
Comment 14•8 years ago
|
||
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/b821737a49f9
Add more check to CrossProcessCompositorBridgeParent::AllocPWebRenderBridgeParent() r=nical
Comment 15•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox61:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Updated•8 years ago
|
status-firefox59:
--- → disabled
status-firefox60:
--- → disabled
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•