Bug 1426588 - Add more check to CrossProcessCompositorBridgeParent::AllocPWebRenderBridgeParent() r=nical